<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <CheckBox
        android:id="@+id/use_digits"
        android:text="@string/use_digits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/use_uppercase_letters"
        android:text="@string/use_uppercase_letters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/use_digits"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/use_lowercase_letters"
        android:text="@string/use_lowercase_letters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/use_uppercase_letters"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/use_special_symbols"
        android:text="@string/use_special_symbols"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/use_lowercase_letters"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/password_length"
        android:textSize="15sp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/use_special_symbols"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/plus"
        android:text="+"
        android:layout_marginStart="5dp"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@id/use_special_symbols"
        app:layout_constraintLeft_toRightOf="@id/password_length" />

    <Button
        android:id="@+id/minus"
        android:text="-"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@id/use_special_symbols"
        app:layout_constraintLeft_toRightOf="@id/plus" />

    <Button
        android:id="@+id/generate"
        android:text="@string/generate"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@id/use_special_symbols"
        app:layout_constraintLeft_toRightOf="@id/minus" />

    <TextView
        android:id="@+id/password"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/password_length"
        app:layout_constraintStart_toStartOf="parent "/>

</androidx.constraintlayout.widget.ConstraintLayout>